--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,8 @@ body {
 
 h1 {
 	text-align: center;
-	font-size: 24px;
+	font-size: 28px;
+	padding: 30px;
 }
 
 #instructions {
@@ -34,7 +35,7 @@ h1 {
 	background-color: #777;
 	margin: 10px;
 	padding: 20px;
-	float: left;
+	float: right;
 }
 
 
