--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,55 +1,51 @@
 body {
-	width: 960px;
-	margin: auto;
-	font-size: 18px;
-	line-height: 34px;
-
-	
+  width: 960px;
+  margin: auto;
+  font-size: 18px;
+  line-height: 34px;
 }
 .crystals {
-	max-width: 150px;
-	width: 100%;
-	max-height: 150px;
-	height: 100%; 
+  max-width: 95px;
+  width: 100%;
+  max-height: 95px;
+  height: 100%;
 }
 
 #header {
-	background-color: #777;
-	margin: 10px;
-	margin: 10px;
+  background-color: #777;
+  margin: 10px;
+  margin: 10px;
 }
 
 h1 {
-	text-align: center;
-	font-size: 28px;
-	padding: 30px;
+  text-align: center;
+  font-size: 28px;
+  padding: 30px;
 }
 
 #instructions {
-	background-color: #777;
-	margin: 10px;
-	padding: 20px;
+  background-color: #777;
+  margin: 10px;
+  padding: 20px;
 }
 
 #numbers {
-	background-color: #777;
-	margin: 10px;
-	padding: 20px;
-	float: right;
+  background-color: #777;
+  margin: 10px;
+  padding: 20px;
+  float: right;
+  width: 200px;
 }
-
 
 #scoreboard {
-	background-color: #777;
-	margin: 10px;
-	padding: 20px;
-	float: left;
+  background-color: #777;
+  margin: 10px;
+  padding: 20px;
+  float: left;
+  width: 200px;
 }
 
-
-
-
-
 #crystalDiv {
-	float: left;
+  padding-top: 45px;
+  float: left;
 }
